# ws_manager

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
scripts/: ws_manager
ws_manager/: ws_manager.py
