<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ws_manager</name>
  <version>1.0.0</version>
  <description>ROS2 workspace manager</description>
  <maintainer email="hilo.soblin@gmail.com">Mamoru Sobue</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>autoware_cmake</build_depend>
</package>
